deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-flask-app
  template:
    metadata:
      labels:
        app: my-flask-app
    spec:
      containers:
      - name: flask-container
        image: doriang12/my_flask_app:latest
        ports:
        - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-second-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-second-service
  template:
    metadata:
      labels:
        app: my-second-service
    spec:
      containers:
      - name: second-service-container
        image: doriang12/my_second_service:latest
        ports:
        - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql-container
        image: doriang12/postgresql:latest
        ports:
        - containerPort: 5432
