service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-flask-service
spec:
  selector:
    app: my-flask-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 5000
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: my-second-service
spec:
  selector:
    app: my-second-service
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 5000
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  selector:
    app: postgresql
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
